--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <h1>Welcome to the Synergy App</h1>
 
-    <footer>Coded by Deborah Imaji</footer>
+    <footer>Coded by
+        <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, code hosted on
+        <a href="https://github.com/DeborahImaji/synergy" target="_blank">GitHub</a>, and website hosted on
+        <a href="https://the-synergy-app.netlify.app/" target="_blank">Netlify</a>
+    </footer>
 
 </body>
 
