Optimised the footer content

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Welcome to the Synergy App</h1>
 
     <footer>Coded by
-        <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, code hosted on
-        <a href="https://github.com/DeborahImaji/synergy" target="_blank">GitHub</a>, and website hosted on
-        <a href="https://the-synergy-app.netlify.app/" target="_blank">Netlify</a>
+        <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
+        <a href="https://github.com/DeborahImaji/synergy" target="_blank">open-sourced on GitHub</a>, and
+        <a href="https://the-synergy-app.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
 
 </body>
