Added the HTML content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 
 <body>
 
-    <h1>Welcome to the Synergy App</h1>
+    <header>
+
+        <form>
+            <input type="text" placeholder="Enter a city..." required>
+            <input type="submit" value="Search">
+        </form>
+
+    </header>
+
+    <main>
+
+        <div>
+            <h1>Seoul</h1>
+            <p>Tuesday 11:50, clear sky</p>
+        </div>
+
+        <div>🌤️ 27°C</div>
+
+        <ul>
+            <li>💧<br>94%<br>Humidity</li>
+            <li>💨<br>3.09km/h<br>Wind Speed</li>
+        </ul>
+
+    </main>
 
     <footer>Coded by
         <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
