Styled the main container

--- a/index.html
+++ b/index.html
@@ -7,40 +7,48 @@
     <title>Synergy App</title>
 
     <link rel="stylesheet" href="src/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <header>
+    <div class="panel">
 
-        <form>
-            <input type="text" placeholder="Enter a city..." required>
-            <input type="submit" value="Search">
-        </form>
+        <header>
 
-    </header>
+            <form>
+                <input type="text" placeholder="Enter a city..." required>
+                <input type="submit" value="Search">
+            </form>
 
-    <main>
+        </header>
 
-        <div>
-            <h1>Seoul</h1>
-            <p>Tuesday 11:50, clear sky</p>
-        </div>
+        <main>
 
-        <div>🌤️ 27°C</div>
+            <div>
+                <h1>Seoul</h1>
+                <p>Tuesday 11:50, clear sky</p>
+            </div>
 
-        <ul>
-            <li>💧<br>94%<br>Humidity</li>
-            <li>💨<br>3.09km/h<br>Wind Speed</li>
-        </ul>
+            <div>🌤️ 27°C</div>
 
-    </main>
+            <ul>
+                <li>💧<br>94%<br>Humidity</li>
+                <li>💨<br>3.09km/h<br>Wind Speed</li>
+            </ul>
 
-    <footer>Coded by
-        <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
-        <a href="https://github.com/DeborahImaji/synergy" target="_blank">open-sourced on GitHub</a>, and
-        <a href="https://the-synergy-app.netlify.app/" target="_blank">hosted on Netlify</a>
-    </footer>
+        </main>
+
+        <footer>Coded by
+            <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
+            <a href="https://github.com/DeborahImaji/synergy" target="_blank">open-sourced on GitHub</a>, and
+            <a href="https://the-synergy-app.netlify.app/" target="_blank">hosted on Netlify</a>
+        </footer>
+
+    </div>
 
 </body>
 
