Added the search engine with JS
P.S. Also fixed a small CSS bug

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <header>
 
-            <form class="search-form">
-                <input type="text" placeholder="Enter a city..." required class="search-bar">
+            <form class="search-form" id="search-form">
+                <input type="text" placeholder="Enter a city..." required class="search-bar" id="search-form-input">
                 <input type="submit" value="Search" class="search-button">
             </form>
 
@@ -31,7 +31,7 @@
             <div class="weather-heading">
 
                 <div>
-                    <h1 class="city-heading">Waterloo</h1>
+                    <h1 class="city-heading" id="city-heading">Waterloo</h1>
                     <p class="city-details">Tuesday 11:50, clear sky</p>
                 </div>
 
@@ -57,6 +57,8 @@
         </footer>
 
     </div>
+
+    <script src="src/index.js"></script>
 
 </body>
 
