Added the search functionality using the API

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
 
             <form class="search-form" id="search-form">
-                <input type="text" placeholder="Enter a city..." required class="search-bar" id="search-form-input">
+                <input type="search" placeholder="Enter a city..." required class="search-bar" id="search-form-input">
                 <input type="submit" value="Search" class="search-button">
             </form>
 
@@ -33,13 +33,13 @@
             <div class="weather-heading">
 
                 <div>
-                    <h1 class="city-heading" id="city-heading">Waterloo</h1>
+                    <h1 class="city-heading" id="city-heading"></h1>
                     <p class="city-details">Tuesday 11:50, clear sky</p>
                 </div>
 
                 <div class="weather-heading-temp">
                     <div class="heading-icon">🌤️</div>
-                    <div class="heading-temperature">27</div>
+                    <div class="heading-temperature" id="heading-temperature"></div>
                     <div class="heading-unit">°C</div>
                 </div>
 
