Injected more weather data

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
                 <div>
                     <h1 class="city-heading" id="city-heading"></h1>
-                    <p class="city-details">Tuesday 11:50, clear sky</p>
+                    <p class="city-details"><span id="current-daytime"></span> <span id="heading-description"></span>
+                    </p>
                 </div>
 
                 <div class="weather-heading-temp">
@@ -46,8 +47,8 @@
             </div>
 
             <div class="weather-specs">
-                <div class="specs-humidity">💧<br><span>94%</span><br>Humidity</div>
-                <div class="specs-windspeed">💨<br><span>3.09km/h</span><br>Wind Speed</div>
+                <div class="specs-humidity">💧<br><span id="current-humidity"></span><br>Humidity</div>
+                <div class="specs-windspeed">💨<br><span id="current-windspeed">3.09km/h</span><br>Wind Speed</div>
             </div>
 
         </main>
