Started updating weather icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 </div>
 
                 <div class="weather-heading-temp">
-                    <div class="heading-icon">🌤️</div>
+                    <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
+                        class="heading-icon">
                     <div class="heading-temperature" id="heading-temperature"></div>
                     <div class="heading-unit">°C</div>
                 </div>
