Added functionality to the weather icon

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 </div>
 
                 <div class="weather-heading-temp">
-                    <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
-                        class="heading-icon">
+                    <div id="icon">
+
+                    </div>
                     <div class="heading-temperature" id="heading-temperature"></div>
                     <div class="heading-unit">°C</div>
                 </div>
