Started adding the forecast HTML

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                 <div class="specs-windspeed">💨<br><span id="current-windspeed">3.09km/h</span><br>Wind Speed</div>
             </div>
 
+            <div class="weather-forecast-section">
+                <div class="weather-forecast-day">
+                    <div class="weather-forecast-date">Tue</div>
+                    <div class="weather-forecast-icon">⛅</div>
+                    <div class="weather-forecast-temperature">15° 9°</div>
+                </div>
+            </div>
+
         </main>
 
         <footer>Coded by
