--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 </head>
@@ -53,21 +55,41 @@
                 <div class="specs-windspeed">💨<br><span id="current-windspeed">3.09km/h</span><br>Wind Speed</div>
             </div>
 
-            <div class="weather-forecast-section">
-                <div class="weather-forecast-day">
-                    <div class="weather-forecast-date">Tue</div>
-                    <div class="weather-forecast-icon">⛅</div>
-                    <div class="weather-forecast-temperature">15° 9°</div>
+
+
+
+
+        </main>
+
+        <div class="weather-forecast-section">
+
+            <div class="weather-forecast-day">
+                <div class="weather-forecast-date">Tue</div>
+                <div class="weather-forecast-icon">🌤️</div>
+                <div class="weather-forecast-temperature">
+                    <div class="weather-forecast-temperature-first">15°</div>
+                    <div class="weather-forecast-temperature-second">9°</div>
                 </div>
             </div>
 
-        </main>
+            <div class="weather-forecast-day-alt">
+                <div class="weather-forecast-date-alt">Tue</div>
+                <div class="weather-forecast-icon-alt">🌤️</div>
+                <div class="weather-forecast-temperature-alt">
+                    <div class="weather-forecast-temperature-first-alt">15°</div>
+                    <div class="weather-forecast-temperature-second-alt">9°</div>
+                </div>
+            </div>
+
+        </div>
 
         <footer>Coded by
             <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
             <a href="https://github.com/DeborahImaji/synergy" target="_blank">open-sourced on GitHub</a>, and
             <a href="https://the-synergy-app.netlify.app/" target="_blank">hosted on Netlify</a>
         </footer>
+
+    </div>
 
     </div>
 
