Restarted: Added index.html file

--- a/index.html
+++ b/index.html
@@ -5,95 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synergy App</title>
-
-    <link rel="stylesheet" href="src/style.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
-
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 </head>
 
 <body>
 
-    <div class="panel">
+    <h1>Welcome to the Synergy App</h1>
 
-        <header>
-
-            <form class="search-form" id="search-form">
-                <input type="search" placeholder="Enter a city..." required class="search-bar" id="search-form-input">
-                <input type="submit" value="Search" class="search-button">
-            </form>
-
-        </header>
-
-        <main class="body-content">
-
-            <div class="weather-heading">
-
-                <div>
-                    <h1 class="city-heading" id="city-heading"></h1>
-                    <p class="city-details"><span id="current-daytime"></span> <span id="heading-description"></span>
-                    </p>
-                </div>
-
-                <div class="weather-heading-temp">
-                    <div id="icon">
-
-                    </div>
-                    <div class="heading-temperature" id="heading-temperature"></div>
-                    <div class="heading-unit">°C</div>
-                </div>
-
-            </div>
-
-            <div class="weather-specs">
-                <div class="specs-humidity">💧<br><span id="current-humidity"></span><br>Humidity</div>
-                <div class="specs-windspeed">💨<br><span id="current-windspeed">3.09km/h</span><br>Wind Speed</div>
-            </div>
-
-
-
-
-
-        </main>
-
-        <div class="weather-forecast-section">
-
-            <div class="weather-forecast-day">
-                <div class="weather-forecast-date">Tue</div>
-                <div class="weather-forecast-icon">🌤️</div>
-                <div class="weather-forecast-temperature">
-                    <div class="weather-forecast-temperature-first">15°</div>
-                    <div class="weather-forecast-temperature-second">9°</div>
-                </div>
-            </div>
-
-            <div class="weather-forecast-day-alt">
-                <div class="weather-forecast-date-alt">Tue</div>
-                <div class="weather-forecast-icon-alt">🌤️</div>
-                <div class="weather-forecast-temperature-alt">
-                    <div class="weather-forecast-temperature-first-alt">15°</div>
-                    <div class="weather-forecast-temperature-second-alt">9°</div>
-                </div>
-            </div>
-
-        </div>
-
-        <footer>Coded by
-            <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
-            <a href="https://github.com/DeborahImaji/synergy" target="_blank">open-sourced on GitHub</a>, and
-            <a href="https://the-synergy-app.netlify.app/" target="_blank">hosted on Netlify</a>
-        </footer>
-
-    </div>
-
-    </div>
-
-    <script src="src/index.js"></script>
+    <footer>Coded by Deborah Imaji</footer>
 
 </body>
 
