--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <h1>Welcome to the Synergy App</h1>
 
-    <footer>Coded by Deborah Imaji</footer>
+    <footer>Coded by
+        <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>,
+        code hosted <a href="https://github.com/DeborahImaji/synergy.git" target="_blank">on GitHub</a>,
+        and website hosted <a href="https://the-synergy-app.netlify.app/" target="_blank">on Netlify</a>
+    </footer>
 
 </body>
 
