Optimised footer content for readability

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Welcome to the Synergy App</h1>
 
     <footer>Coded by
-        <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>,
-        code hosted <a href="https://github.com/DeborahImaji/synergy.git" target="_blank">on GitHub</a>,
-        and website hosted <a href="https://the-synergy-app.netlify.app/" target="_blank">on Netlify</a>
+        <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
+        <a href="https://github.com/DeborahImaji/synergy.git" target="_blank">open-sourced on GitHub</a>, and hosted
+        <a href="https://the-synergy-app.netlify.app/" target="_blank">on Netlify</a>
     </footer>
 
 </body>
