Added the HTML content

--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
 
 <body>
 
-    <h1>Welcome to the Synergy App</h1>
+    <header>
 
-    <footer>Coded by
+        <form>
+            <input type="search" placeholder="Enter a city..." required />
+            <input type="submit" value="Search" />
+        </form>
+
+    </header>
+
+    <main>
+
+        <div>
+
+            <h1>Seoul</h1>
+            <p>
+                Sunday 19:33, clear sky
+                <br />
+                Humidity: 88%, Wind: 3.09km/h
+            </p>
+
+        </div>
+
+        <div>
+            🌑 16 °C
+        </div>
+
+    </main>
+
+    <footer>This project was coded by
         <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
         <a href="https://github.com/DeborahImaji/synergy.git" target="_blank">open-sourced on GitHub</a>, and hosted
         <a href="https://the-synergy-app.netlify.app/" target="_blank">on Netlify</a>
