--- a/index.html
+++ b/index.html
@@ -5,43 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synergy App</title>
+
+    <link rel="stylesheet" href="src/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
-    <header>
+    <div class="weather-app">
 
-        <form>
-            <input type="search" placeholder="Enter a city..." required />
-            <input type="submit" value="Search" />
-        </form>
+        <header>
 
-    </header>
+            <form>
+                <input type="search" placeholder="Enter a city..." required />
+                <input type="submit" value="Search" />
+            </form>
 
-    <main>
+        </header>
 
-        <div>
+        <main>
 
-            <h1>Seoul</h1>
-            <p>
-                Sunday 19:33, clear sky
-                <br />
-                Humidity: 88%, Wind: 3.09km/h
-            </p>
+            <div>
 
-        </div>
+                <h1>Seoul</h1>
+                <p>
+                    Sunday 19:33, clear sky
+                    <br />
+                    Humidity: 88%, Wind: 3.09km/h
+                </p>
 
-        <div>
-            🌑 16 °C
-        </div>
+            </div>
 
-    </main>
+            <div>
+                🌑 16 °C
+            </div>
 
-    <footer>This project was coded by
-        <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
-        <a href="https://github.com/DeborahImaji/synergy.git" target="_blank">open-sourced on GitHub</a>, and hosted
-        <a href="https://the-synergy-app.netlify.app/" target="_blank">on Netlify</a>
-    </footer>
+        </main>
+
+        <footer>This project was coded by
+            <a href="https://github.com/DeborahImaji" target="_blank">Deborah Imaji</a>, is
+            <a href="https://github.com/DeborahImaji/synergy.git" target="_blank">open-sourced on GitHub</a>, and hosted
+            <a href="https://the-synergy-app.netlify.app/" target="_blank">on Netlify</a>
+        </footer>
+
+    </div>
 
 </body>
 
