--- a/index.html
+++ b/index.html
@@ -30,19 +30,23 @@
 
         <main>
 
-            <div>
+            <div class="weather-app-data">
 
-                <h1>Seoul</h1>
-                <p>
-                    Sunday 19:33, clear sky
-                    <br />
-                    Humidity: 88%, Wind: 3.09km/h
-                </p>
+                <div>
+                    <h1 class="weather-app-city">Seoul</h1>
+                    <p class="weather-app-details">
+                        Sunday 19:33, clear sky
+                        <br />
+                        Humidity: <strong>88%</strong>, Wind: <strong>3.09km/h</strong>
+                    </p>
+                </div>
 
-            </div>
+                <div class="weather-app-temperature-container">
+                    <div class="weather-app-icon">🌑</div>
+                    <div class="weather-app-temperature">16</div>
+                    <div class="weather-app-unit">°C</div>
+                </div>
 
-            <div>
-                🌑 16 °C
             </div>
 
         </main>
