--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
         <header>
 
-            <form class="search-form">
-                <input type="search" placeholder="Enter a city..." required class="search-form-input" />
+            <form class="search-form" id="search-form">
+                <input type="search" placeholder="Enter a city..." required class="search-form-input"
+                    id="search-form-input" />
                 <input type="submit" value="Search" class="search-form-button" />
             </form>
 
@@ -33,7 +34,7 @@
             <div class="weather-app-data">
 
                 <div>
-                    <h1 class="weather-app-city">Seoul</h1>
+                    <h1 class="weather-app-city" id="city">Seoul</h1>
                     <p class="weather-app-details">
                         Sunday 19:33, clear sky
                         <br />
@@ -58,6 +59,8 @@
         </footer>
 
     </div>
+
+    <script src="src/script.js"></script>
 
 </body>
 
