--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="weather-app-data">
 
                 <div>
-                    <h1 class="weather-app-city" id="city">Seoul</h1>
+                    <h1 class="weather-app-city" id="city"></h1>
                     <p class="weather-app-details">
                         Sunday 19:33, clear sky
                         <br />
@@ -46,7 +46,7 @@
 
                 <div class="weather-app-temperature-container">
                     <div class="weather-app-icon">🌑</div>
-                    <div class="weather-app-temperature">16</div>
+                    <div class="weather-app-temperature" id="temperature">16</div>
                     <div class="weather-app-unit">°C</div>
                 </div>
 
