Injected more weather data

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <div>
                     <h1 class="weather-app-city" id="city"></h1>
                     <p class="weather-app-details">
-                        Sunday 19:33, clear sky
+                        <span id="time"></span>, <span id="description"></span>
                         <br />
-                        Humidity: <strong>88%</strong>, Wind: <strong>3.09km/h</strong>
+                        Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed">3.09km/h</strong>
                     </p>
                 </div>
 
