--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
                 </div>
 
                 <div class="weather-app-temperature-container">
-                    <div class="weather-app-icon">🌑</div>
+                    <div id="icon">
+                        <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-night.png"
+                            class="weather-app-icon" />
+                    </div>
                     <div class="weather-app-temperature" id="temperature">16</div>
                     <div class="weather-app-unit">°C</div>
                 </div>
