--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 
             </div>
 
+            <div class="weather-forecast" id="forecast"></div>
+
+
+
         </main>
 
         <footer>This project was coded by
